# rpi-flashcards

./: .gitignore  Makefile  README.md  pyproject.toml
configs/decks/: poc.toml
data/decks/: poc_deck.json
data/normalized/: seed_entries.jsonl
data/raw/manual_seed/: seed_dictionary.json
docs/: architecture.md  data-sources.md  hardware.md  roadmap.md
scripts/: build_poc_deck.py  normalize_sample.py  preview_first_card.py
src/rpi_flashcards/: __init__.py  cli.py
src/rpi_flashcards/core/: __init__.py  models.py  progress.py  session.py
src/rpi_flashcards/data/: __init__.py  deck_builder.py  io.py  normalize.py  progress_store.py
src/rpi_flashcards/display/: __init__.py  base.py  layout.py  preview.py
src/rpi_flashcards/platform/: __init__.py  raspberry_pi.py
src/rpi_flashcards/ui_terminal/: __init__.py  app.py
tests/core/: test_session.py
tests/data/: test_deck_builder.py  test_normalize.py
tests/display/: test_layout.py
